dynamic-dmn-rules-eval/target/classes/META-INF/fabric8/openshift/fraud-dynamic-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: f713f889c02c69e61fec5d6d15fb1f1a3f58f1ed
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=fraud-dynamic&var-version=1.0.0.0
  labels:
    app: fraud-dynamic
    provider: fabric8
    version: 1.0.0.0
    group: fraud.demo
  name: fraud-dynamic
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fraud-dynamic
    provider: fabric8
    group: fraud.demo
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: f713f889c02c69e61fec5d6d15fb1f1a3f58f1ed
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=fraud-dynamic&var-version=1.0.0.0
      labels:
        app: fraud-dynamic
        provider: fabric8
        version: 1.0.0.0
        group: fraud.demo
    spec:
      containers:
      - env:
        - name: BOOTSTRAP_SERVERS
          value: my-cluster-kafka-bootstrap:9092
        - name: INCOMING_TRANSACTION
          value: incoming-transaction
        - name: DYNAMIC_EVAL_STATUS
          value: fraud-topic
        - name: APPLICATION_ID
          value: dyn-eval-stats
        - name: CLIENT_ID
          value: dyn-eval-stats
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: demo/fraud-dynamic:1.0.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
