dynamic-dmn-rules-eval/target/classes/META-INF/fabric8/openshift/fraud-dynamic-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: fraud-dynamic
    provider: fabric8
    version: 1.0.0.0
    group: fraud.demo
  name: fraud-dynamic
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fraud-dynamic
